--- a/templates/table.html
+++ b/templates/table.html
@@ -82,7 +82,6 @@
         {% for part in parts %}
         
         {% if part[0] == fig[0] %}
-          {{ part[5] }}
         <tr>
             {% if part[5] == 'nil' %}
             <td><img src="{{ '/static/none.jpg' }}" class="lightbox-trigger" alt="{{ part[3] }}" style="height: 50px; width: 50px;margin:0;padding: 0;"></td>
@@ -91,7 +90,7 @@
             {% endif %}
             <td style="text-align:left;margin:0px;" class="hidden-mobile name-class">{{ part[3] }}</td>
             <td class="hidden-mobile">{{ part[7] }}</td>
-            <td style="text-align: center;">{{ part[8] }}</td>
+            <td style="text-align: center;">{{ part[8] * fig[3] }}</td>
             <td class="centered-cell">
               <div class="inputContainer">
                 {% set ns = namespace(count='') %}
