--- a/templates/base.html
+++ b/templates/base.html
@@ -259,6 +259,9 @@ td img{
         <a class="navbar-item hidden-desktop" id="expand-button">
           Expand Columns
         </a> 
+	<a class="navbar-item" href="{{ '/delete/' + u_id }}" class="navbar-item">
+			Delete
+		</a>
       </div>
       
       <div id="navMenu" class="navbar-menu">
@@ -267,7 +270,6 @@ td img{
         </div>
     
         <div class="navbar-end">
-              
         </div>
       </div>
     </nav>
