Moved layout around a bit

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,8 +190,8 @@
 	      <div class="columns" style="">
 		<div class="column is-two-thirds" style="text-align: left;">
 		  <p class="is-size-5">
-		    <span style="font-weight: bold;" class="set_id">{{ i[0] }}</span> <span style="font-weight: bold;" class="set_name">{{ i[1] }}</span>
-		   <span class="is-size-7">{{ i[8] }}</span>
+		    <span style="font-weight: bold;" class="set_id">{{ i[0] }}</span> <span style="font-weight: bold;" class="set_name">{{ i[1] }}</span><br>
+			<a class="is-size-7 set_theme" style="color: #363636;">{{ i[3] }}</a> <a class="is-size-7" style="color: #363636;"> (<span class='set_year'>{{ i[2] }}</span>)</a>
 		  </p>
 		</div>
 		<div class="column" style="text-align: left;">
@@ -239,7 +239,8 @@
 		<footer class="card-footer" style="">
 		  <p class="card-footer-item">
 		  <span>
-			  <a class="is-size-7 set_theme" style="color: #363636;">{{ i[3] }}</a> <a class="is-size-7" style="color: #363636;"> (<span class='set_year'>{{ i[2] }}</span>)</a>
+			<span class="is-size-7">{{ i[8] }}</span>
+			  
 		  </span>
 		  </p>
 
